paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_2/sample_003/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_2/sample_003/target.rs:26:14
   |
26 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/array_decl_2/sample_003/target.rs:63:13
   |
63 |         let mut hp = HoldP { p: &mut y };
   |             ----^^
   |             |
   |             help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.